<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_down_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:src="@mipmap/gender_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_sex"
            android:textColor="@color/font_black_333"
            android:textSize="@dimen/font_30px" />

        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_sex_all"
                style="@style/slashfragment_filter_radiobutton"
                android:checked="true"
                android:text="@string/filter_sex_all" />

            <RadioButton
                android:id="@+id/rb_boy"
                style="@style/slashfragment_filter_radiobutton"
                android:checked="false"
                android:text="@string/filter_sex_boy" />

            <RadioButton
                android:id="@+id/rb_girl"
                style="@style/slashfragment_filter_radiobutton"
                android:checked="false"
                android:text="@string/filter_sex_girl" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/divider_c1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:src="@mipmap/place_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_distance"
            android:textColor="@color/font_black_333"
            android:textSize="@dimen/font_30px" />

        <RadioGroup
            android:id="@+id/rg_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_distance_all"
                style="@style/slashfragment_filter_radiobutton"
                android:checked="true"
                android:text="@string/filter_distance_all" />

            <RadioButton
                android:id="@+id/rb_5"
                style="@style/slashfragment_filter_radiobutton"
                android:checked="false"
                android:text="@string/filter_distance_5" />

            <RadioButton
                android:id="@+id/rb_10"
                style="@style/slashfragment_filter_radiobutton"
                android:checked="false"
                android:text="@string/filter_distance_10" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/divider_c1" />

    <Button
        android:layout_margin="12dp"
        android:background="@drawable/common_selector_btn"
        android:id="@+id/btn_sure"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font_28px"
        android:text="确定"/>

</LinearLayout>
