<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/include_layout_head"
        layout="@layout/layout_head"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:text="@string/txt_86"
            android:textColor="@color/black"
            android:textSize="@dimen/font_30px" />

        <EditText
            android:id="@+id/afp_et_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:drawableBottom="@drawable/selector_drawable_line"
            android:hint="@string/txt_register_phone"
            android:imeOptions="actionNext"
            android:paddingLeft="108dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="@dimen/font_30px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/ar_et_code"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@null"
            android:drawableBottom="@drawable/selector_drawable_line"
            android:hint="@string/txt_register_code"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="108dp"
            android:textColorHint="@color/hint_text_color"
            android:textSize="@dimen/font_30px" />

        <TextView
            android:id="@+id/tv_sendcode"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="获取验证码"
            android:textColor="#ffa726"
            android:textSize="@dimen/font_30px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:text="@string/txt_pwd"
            android:textColor="@color/black"
            android:textSize="@dimen/font_30px" />

        <EditText
            android:id="@+id/afp_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:digits="@string/password_match"
            android:drawableBottom="@drawable/selector_drawable_line"
            android:hint="@string/ht_pwd"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="108dp"
            android:textColorHint="@color/hint_text_color"
            android:textSize="@dimen/font_30px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:text="@string/txt_pwd_again"
            android:textColor="@color/black"
            android:textSize="@dimen/font_30px" />

        <EditText
            android:id="@+id/afp_et_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:digits="@string/password_match"
            android:drawableBottom="@drawable/selector_drawable_line"
            android:hint="@string/txt_pwd_again"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="108dp"
            android:textColorHint="@color/hint_text_color"
            android:textSize="@dimen/font_30px" />
    </RelativeLayout>

    <Button
        android:id="@+id/afp_btn_submit"
        android:layout_width="@dimen/common_btn_width_235"
        android:layout_height="@dimen/common_btn_height_35"
        android:layout_marginTop="60dp"
        android:background="@drawable/common_selector_btn"
        android:text="@string/btn_submit"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>