<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/include_layout_head"
        layout="@layout/layout_head"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:text="@string/txt_86"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:drawableBottom="@drawable/selector_drawable_line"
            android:editable="false"
            android:hint="@string/txt_register_phone"
            android:imeOptions="actionNext"
            android:paddingLeft="96dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:text="昵称"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:digits="@string/password_match"
            android:drawableBottom="@drawable/selector_drawable_line"
            android:hint="@string/ht_nickname"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="11"
            android:paddingLeft="96dp"
            android:textColorHint="@color/hint_text_color"
            android:textSize="16sp" />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:text="@string/txt_pwd"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:digits="@string/password_match"
            android:drawableBottom="@drawable/selector_drawable_line"
            android:hint="@string/ht_pwd"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="96dp"
            android:textColorHint="@color/hint_text_color"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:text="@string/txt_pwd_again"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:digits="@string/password_match"
            android:drawableBottom="@drawable/selector_drawable_line"
            android:hint="@string/txt_pwd_again"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="96dp"
            android:textColorHint="@color/hint_text_color"
            android:textSize="16sp" />
    </RelativeLayout>





    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="*密码长度6~20位,设置密码的格式不能是纯数字密码"
        android:textColor="#868686"
        android:textSize="12sp" />
    <Button
        android:id="@+id/btn_regist"
        android:layout_width="@dimen/common_btn_width_235"
        android:layout_height="@dimen/common_btn_height_35"
        android:layout_marginTop="60dp"
        android:background="@drawable/common_selector_btn"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>