<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/include_layout_head"
        layout="@layout/layout_head"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <ImageView
        android:id="@+id/ard_iv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@mipmap/login_head" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_set_head" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp">

        <EditText
            android:id="@+id/ard_et_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:drawableBottom="@drawable/selector_drawable_line"
            android:hint="@string/txt_hint_set_nick"
            android:paddingLeft="16dp"
            android:textColorHint="@color/hint_text_color"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:drawableBottom="@drawable/selector_drawable_line"
            android:inputType="textPassword"
            android:paddingLeft="96dp"
            android:textColorHint="@color/hint_text_color"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/ard_rg_sex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp">

            <RadioButton
                android:id="@+id/ard_rb_sex_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sex_male" />

            <RadioButton
                android:id="@+id/ard_rb_sex_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="96dp"
                android:text="@string/sex_female" />
        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ard_btn_finish"
            android:layout_width="@dimen/common_btn_width_235"
            android:layout_height="@dimen/common_btn_height_35"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="117dp"
            android:background="@drawable/common_selector_btn"
            android:text="@string/btn_finish"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>